fixed hero box position on smaller screens

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -428,4 +428,8 @@ label {
     .header-container {
         padding-top: 125px;
     }
+
+    .hero-box {
+        top: 10vh;
+    }
 }
